--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -268,7 +268,7 @@ jobs:
       - start_runner
       - build_and_push_image
     if: needs.deploy_aws_infrastructure.outputs.terraform_action != 'destroy'
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     steps:
       - name: Export environment variable values to file
         env:
